--- a/vpet/app/views/pets/show.html.erb
+++ b/vpet/app/views/pets/show.html.erb
@@ -167,6 +167,10 @@
   <%= @pet.user.name %>
 </p>
 
+<p>
+    <strong>Play A Game:</strong>
+    <%# link_to 'Play', image_path %>
+</p>
 <%# COMMENT BLOCK %><% if false %>
 <p>
   <strong>User:</strong>
