--- a/vpet/app/views/games/edit.html.erb
+++ b/vpet/app/views/games/edit.html.erb
@@ -1,6 +1,5 @@
-<h1>Editing Game</h1>
+<h1>Casino</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @game %> |
-<%= link_to 'Back', games_path %>
+<%= link_to 'Return To Stable', pet_games_path %>
