--- a/vpet/app/views/games/_form.html.erb
+++ b/vpet/app/views/games/_form.html.erb
@@ -15,33 +15,13 @@
     <%= f.text_field :money %>
 </div>
 
+<div class="field">
+    <%= f.label :cost %><br />
+    <%= f.text_field :cost %>
+</div>
+
 <div class="actions">
     <%= f.submit %>
 </div>
-
-
-<% if false %>
-    <%= choice = select_tag(options_for_select(['', 'Rock', 'Paper', 'Scissors'])) %>
-    <%= temp = rand(1...3) %>
-
-    <% if choice == 'Rock' && temp == 1 %>
-        <%= 'Test' %>
-        <% f.submit "Submit" %>
-    <% end %>
-
-    <% if choice == 'Rock' && temp == 2 %>
-        <% f.submit "Submit" %>
-    <% end %>
-
-    <% if choice == 'Rock' && temp == 3 %>
-        <div class="actions">
-        <% f.submit "Submit", :onclick => (@pet.money + 10) %>
-        </div>
-    <% end %>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
 
 <% end %>
