--- a/vpet/app/views/games/index.html.erb
+++ b/vpet/app/views/games/index.html.erb
@@ -23,8 +23,9 @@
   <thead>
     <tr>
       <th>Game Name</th>
-      <th>Game Description</th>
+      <th>Game Rules</th>
       <th>Prize</th>
+      <th>Cost to Play</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -33,13 +34,13 @@
     <% @games.each do |game| %>
       <tr>
         <td><%= game.g_name %></td>
-        <td><%= game.g_des %></td>
+        <td><%= link_to 'Take A Look', pet_game_path(@pet.id, game.id) %></td>
         <td><%= game.money %></td>
+        <td><%= game.cost %></td>
         <td><%# game.pet.name %></td>
         <td><%# game.pet.money %></td>
-        <td><%= link_to 'Show', pet_game_path(@pet.id, game.id) %></td>
-        <td><%= link_to 'Edit', edit_pet_game_path(@pet.id, game.id) %></td>
-        <td><%= link_to 'Destroy', pet_game_path(@pet.id, game.id), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%# link_to 'Edit', edit_pet_game_path(@pet.id, game.id) %></td>
+        <td><%= link_to 'Trash', pet_game_path(@pet.id, game.id), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
