--- a/vpet/app/assets/stylesheets/games.scss
+++ b/vpet/app/assets/stylesheets/games.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the Games controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+  table { 
+        color: #333;
+         width: 500px;
+          border-collapse:
+           collapse; border-spacing: 0;
+        }
+         
+          td, th{
+               border: 1px solid #CCC; height: 30px;
+            }
+             
+              th, {
+                   background: #E6E6E6;
+                    font-weight: bold;
+                 }
+
