--- a/vpet/app/assets/stylesheets/pets.scss
+++ b/vpet/app/assets/stylesheets/pets.scss
@@ -1,3 +1,28 @@
 // Place all the styles related to the Pets controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+    background-color: yellow;
+    }
+
+table { 
+    color: #333;
+    width: 500px; 
+    border-collapse: 
+    collapse; border-spacing: 0; 
+}
+
+td, th{
+    border: 1px solid #CCC; height: 30px; 
+}
+
+th, {
+    background: #E6E6E6;
+    font-weight: bold;
+}
+
+td {
+background: #FAFAFA; /* Lighter grey background */
+text-align: center; /* Center our text */
+}
